Feat: add type feature sample source

--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "description": "NodeJS demo",
   "main": "app.js",
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.20.0",
+    "@typescript-eslint/parser": "^5.20.0",
+    "eslint": "^8.13.0",
     "webpack": "^5.72.0"
   },
   "scripts": {
